@@ -17,6 +17,7 @@ and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
          tyler.je.reddy
 
   * 0.16
+    - Added unit tests for MDAnalysis.analysis.distances.dist()
     - Added unit tests for clip_matrix frustrum boundary checks
     - Added unit tests for bad file mode passed to SelectionWriter
     - Added regression tests for MDAnalysis.analysis.nuclinfo (Issue #790)
